--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div>&nbsp;</div>
     <div>&nbsp;</div>
 <h1>Welcome</h1>
-    <h3 class="title"><a href ="https://salehaosman.github.io/week0/index.html"> please, click here to see my cv me</h3>
+    <h3 class="title"><a href ="https://salehaosman.github.io/week00/index1.html"> please, click here to see my cv me</h3>
 
     
   </body>
