--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Exmple</title>
+<title>Exmple1</title>
 <!--C:\Users\saleh\Desktop\-->
 <link rel = "stylesheet" type = "text/css"  href = "css.css" />
 </head>
