--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Home page</title>
+<title>Home</title>
 <!--<link rel = "stylesheet" type = "text/css"  href ="https://github.com/salehAOsman/week00/css.css" />-->
 </head>
 <body >
     <div>&nbsp;</div>
     <div>&nbsp;</div>
 <h1>Welcome</h1>
-    <h3 class="title"><a href ="https://salehaosman.github.io/week00/index1.html"> please, click here to see my cv me</h3>
+    <h3 class="title"><a href ="https://salehaosman.github.io/week00/index1.html"> please, click here to see my cv</h3>
 
     
   </body>
