--- a/html-css/week1/index1.html
+++ b/html-css/week1/index1.html
@@ -3,6 +3,8 @@
 <head>
 <title>Exmple</title>
 <!--C:\Users\saleh\Desktop\-->
+  <!--  <link rel = "stylesheet" type = "text/css"  href ="https://github.com/salehAOsman/week00/html-css/week1/css.css" />-->
+
 <link rel = "stylesheet" type = "text/css"  href = "css.css" />
 </head>
 <body >
