--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <title>Home</title>
-<link rel = "stylesheet" type = "text/css"  href ="https://github.com/salehAOsman/week00/html-css/week1/css.css" />
+<!--<link rel = "stylesheet" type = "text/css"  href ="https://github.com/salehAOsman/week00/html-css/week1/css.css" />-->
+    <link rel = "stylesheet" type = "text/css"  href ="week00/html-css/week1/css.css" />
+
 </head>
 <body >
     <div>&nbsp;</div>
