--- a/html-css/week1/index1.html
+++ b/html-css/week1/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Exmple</title>
+<title>Exmple11</title>
 <!--C:\Users\saleh\Desktop\-->
   <!--  <link rel = "stylesheet" type = "text/css"  href ="https://github.com/salehAOsman/week00/html-css/week1/css.css" />-->
 
