--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Home</title>
 <!--<link rel = "stylesheet" type = "text/css"  href ="https://github.com/salehAOsman/week00/html-css/week1/css.css" />-->
-    <link rel = "stylesheet" type = "text/css"  href ="html-css/week1/css.css" />
+    <link rel = "stylesheet" type = "text/css"  href ="/foocoding/html-css/week1/css.css" />
 
 </head>
 <body >
