--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Home</title>
-<link rel = "stylesheet" type = "text/css"  href ="https://github.com/salehAOsman/foocoding/html-css/week1/css.css" />
+<link rel = "stylesheet" type = "text/css"  href ="https://salehaosman.github.io/foocoding/html-css/week1/css.css" />
    <!-- <link rel = "stylesheet" type = "text/css"  href ="foocoding/html-css/week1/css.css" />-->
 
 </head>
@@ -10,8 +10,7 @@
     <div>&nbsp;</div>
     <div>&nbsp;</div>
 <h1>Welcome</h1>
-    <h3 class="title"><a href ="https://salehaosman.github.io/week00/html-css/week1/index1.html"> please, click here to see my cv</h3>
+    <h3 class="title"><a href ="https://salehaosman.github.io/foocoding/html-css/week1/index1.html"> please, click here to see my cv</h3>
 
-    
   </body>
 </html>
