--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Home</title>
-<link rel = "stylesheet" type = "text/css"  href ="https://salehaosman.github.io/foocoding/html-css/week1/css.css" />
-   <!-- <link rel = "stylesheet" type = "text/css"  href ="foocoding/html-css/week1/css.css" />-->
+<!--<link rel = "stylesheet" type = "text/css"  href ="https://salehaosman.github.io/foocoding/html-css/week1/css.css" />-->
+   <link rel = "stylesheet" type = "text/css"  href ="foocoding/html-css/week1/css.css" />
 
 </head>
 <body >
