--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>&nbsp;</div>
     <div>&nbsp;</div>
 <h1>Welcome</h1>
-    <h3 class="title"><a href ="https://salehaosman.github.io/foocoding/html-css/week1/index1.html"> please, click here to see my cv</h3>
-
+   <!-- <h3 class="title"><a href ="https://salehaosman.github.io/foocoding/html-css/week1/index1.html"> please, click here to see my cv</h3>-->
+       <h3 class="title"><a href ="https://salehaosman.github.io/week0/index1.html">please, click</h3>
   </body>
 </html>
