--- a/html-css/week1/index1.html
+++ b/html-css/week1/index1.html
@@ -12,14 +12,14 @@
 
 
      <img src ="image.jpg" alt ="picture car"> 
-    
+    <div>
       <ul class="address">
             <h3 class="myName">Saleh Abdo Osman  </h3>
             <li>Adress: Kronotorpsvägen 1A, 37161 Lyckeby</li>
             <li>Tel:<a href="tel:0046764191954"> 0764 – 19 19 54 </li>
             <li>Email<a href="mailto:saleh1.a.osman@gmail.com?Subject=Hello%20again" target="_top"> saleh1.a.osman@gmail.com </a></li>
         </ul>
-    
+    </div>
     <div>&nbsp;</div>
 
     <div class="About-me">
