--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <h1>Welcome</h1>
    <!-- <h3 class="title"><a href ="https://salehaosman.github.io/foocoding/html-css/week1/index1.html"> please, click here to see my cv</h3>-->
        <h3 class="title"><a href ="https://salehaosman.github.io/foocoding/html-css/week1/index1.html">Please, click here to see my cv </h3>
+         <h3 class="title"><a href ="https://salehaosman.github.io/foocoding/html-css/week2/index.html">Please, click here to see assigment 2 </h3>
          <!-- https://salehaosman.github.io/week0/index.html-->
        <!--   https://github.com/salehAOsman/foocoding/blob/master/html-css/week1/index1.html-->
 
