change ordering folers

--- a/week2/float-flex/index.html
+++ b/week2/float-flex/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+      <link  rel="stylesheet" type="text/css" href="css/all.css"><!-- load svg -->
+        <!--<link  rel="stylesheet" type="text/css" href="css/webfonts/fa-brands-400.svg"> -->
+
         <title>Grids</title>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -11,6 +15,9 @@
             <h1>Grids</h1>
         </header>
         <main>
+              <!--  <i class="far fa-star"></i>
+            <i class="fas fa-bars"></i>-->
+            </span>
             <section>
                 <h2>Grid with floats</h2>
                 <ul id="grid-floats">
@@ -85,9 +92,7 @@
                         <p>Met prachtige luchtfoto's en -video's maak je indruk. De DJI Spreading Wings S900 is een lichtgewicht drone die met zijn draaggewicht van maximaal 8,2 kilogram voorziet in het maken van dergelijke beelden.</p>
                     </li>
                 </ul>
-                
             </section>
-            
             <section>
                 <h2>Grid with flexbox</h2>
                 <ul id="grid-flex">
@@ -161,6 +166,7 @@
                         <img src="images/drone7.png">
                         <p>Met prachtige luchtfoto's en -video's maak je indruk. De DJI Spreading Wings S900 is een lichtgewicht drone die met zijn draaggewicht van maximaal 8,2 kilogram voorziet in het maken van dergelijke beelden.</p>
                     </li>
+
                 </ul>
             </section>
         </main>
