modifer in menu icon up in nav

--- a/week3/Web_Side/index.html
+++ b/week3/Web_Side/index.html
@@ -24,8 +24,8 @@
 
             <!--icon from FontAwesome-->
             <div class="dropdown">
-                <span> <a class="btn btn-primary" href="#navigation-main" aria-label="Skip to main navigation">
-                        <i class="fa fa-bars" aria-hidden="true"></i>
+                <span id="menu"> <a class="btn btn-primary" href="#navigation-main" aria-label="Skip to main navigation">
+                        <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
                     </a></span>
                 <!--icon from FontAwesome-->
                 <div class="dropdown-content">
