added js projects

--- a/javaScript/js3/week2/index.html
+++ b/javaScript/js3/week2/index.html
@@ -3,28 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fetch API</title>
-    <style>
-      #contributors {
-        display: none;
-      }
-      #contributors.active {
-        display: block;
-      }
-    </style>
   </head>
-
-  <body>
-    <h2>Contributors</h2>
-
-    <ul id="list"></ul>
-​
-    <div id="contributors">
-    
-    </div>
-​
-	<script src="main.js">
+    <body>
+      <div class="flex-container">
+        <div id = "data1" ></div>
+        <div id = "data2" ></div>
+      </div>
+	<script src="main1.js">
     </script>
   </body>
 </html>
